# SimplaCompiler

./: CMakeLists.txt  Dubbi.txt  Input.txt  Inputriserva  Problemi noti.txt  README.txt  SCRIPT  Strutture  def.h  hashmap.h  heap.c  heap.h  interprete.c  interprete.h  lex.yy.c  lexer.c  lexer.lex  main.c  output.txt  parser.c  parser.dot  parser.h  parser.output  parser.y  provas  run  runStructure.c  runStructure.h  semantica.c  semantica.h  stringHeap.c  stringHeap.h  stringPoolStructure.c  stringPoolStructure.h  table.c  table.h  tolex.lex  tree.c  writeToFile.c  writeToFile.h  (+1 more)
Presentazione/: Orale tesi.docx  Presentazione_Marco_Sartorelli_719788.pptx  Tesi.docx  m10001.tif
esempicode/: elimina  fatt  fattoriali  fibonacci  pointers  pointers2  pointers3  prova  string
